[package]
name = "server"
authors = ["Brad Dunbar <dunbarb2@gmail.com>"]
edition = "2021"
rust-version = "1.74.0"
version = "0.1.0"

[dependencies]
clap = { version = "4.5.26", features = ["derive"] }
bradis = "0.1"
thiserror = "1.0.65"
tokio = { version = "1", features = ["net"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
